--- a/index.html
+++ b/index.html
@@ -1292,33 +1292,33 @@ window.onload = function () {
 
     let currentImageIndex = 0;
 
-    function preloadImages(callback) {
-        let imagesLoaded = 0;
-        images.forEach((src) => {
-            const img = new Image();
-            img.src = src;
+    document.addEventListener("DOMContentLoaded", () => {
+      document.body.style.overflow = "hidden"; // Disable scrolling
 
-            img.onload = () => {
-                imagesLoaded++;
-                if (imagesLoaded === images.length) callback();
-            };
+      const images = Array.from(document.querySelectorAll("img"));
+      let loaded = 0;
 
-            img.onerror = () => {
-                console.error(`Failed to load image: ${src}`);
-                imagesLoaded++;
-                if (imagesLoaded === images.length) callback();
-            };
-        });
-    }
+      const checkAllLoaded = () => {
+        if (++loaded === images.length || images.length === 0) {
+          const loadingScreen = document.getElementById("loading-screen");
+          loadingScreen.style.opacity = "0";
+          setTimeout(() => {
+            loadingScreen.style.display = "none";
+            document.body.style.overflow = ""; // Re-enable scrolling
+          }, 500); // Matches fade-out duration
+        }
+      };
 
-    preloadImages(() => {
-        loadingScreen.style.transition = 'opacity 0.5s ease-out'; // Smooth fade-out transition
-        loadingScreen.style.opacity = '0'; // Fade out
-        setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out
+      images.forEach(img => {
+        if (img.complete) {
+          checkAllLoaded();
+        } else {
+          img.onload = checkAllLoaded;
+          img.onerror = checkAllLoaded;
+        }
+      });
 
-        body.style.visibility = "visible";
-        updateBackground();
-        setInterval(nextImage, 4000);
+      if (images.length === 0) checkAllLoaded(); // If no images, hide immediately
     });
 
     function updateBackground() {
