--- a/index.html
+++ b/index.html
@@ -1292,33 +1292,35 @@ window.onload = function () {
 
     let currentImageIndex = 0;
 
-    document.addEventListener("DOMContentLoaded", () => {
-      document.body.style.overflow = "hidden"; // Disable scrolling
+    function preloadImages(callback) {
+      document.body.style.overflow = "hidden";
+        let imagesLoaded = 0;
+        images.forEach((src) => {
+            const img = new Image();
+            img.src = src;
 
-      const images = Array.from(document.querySelectorAll("img"));
-      let loaded = 0;
+            img.onload = () => {
+                imagesLoaded++;
+                if (imagesLoaded === images.length) callback();
+            };
 
-      const checkAllLoaded = () => {
-        if (++loaded === images.length || images.length === 0) {
-          const loadingScreen = document.getElementById("loading-screen");
-          loadingScreen.style.opacity = "0";
-          setTimeout(() => {
-            loadingScreen.style.display = "none";
-            document.body.style.overflow = ""; // Re-enable scrolling
-          }, 500); // Matches fade-out duration
-        }
-      };
+            img.onerror = () => {
+                console.error(`Failed to load image: ${src}`);
+                imagesLoaded++;
+                if (imagesLoaded === images.length) callback();
+            };
+        });
+    }
 
-      images.forEach(img => {
-        if (img.complete) {
-          checkAllLoaded();
-        } else {
-          img.onload = checkAllLoaded;
-          img.onerror = checkAllLoaded;
-        }
-      });
+    preloadImages(() => {
+        loadingScreen.style.transition = 'opacity 0.5s ease-out'; // Smooth fade-out transition
+        loadingScreen.style.opacity = '0';
+        document.body.style.overflow = "";
+        setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out
 
-      if (images.length === 0) checkAllLoaded(); // If no images, hide immediately
+        body.style.visibility = "visible";
+        updateBackground();
+        setInterval(nextImage, 4000);
     });
 
     function updateBackground() {
