--- a/servises.html
+++ b/servises.html
@@ -34,18 +34,18 @@
       position: fixed;
       top: 0;
       left: 0;
-      height: 60px;
+      height: 80px;
       z-index: 500;
     }
 
     header img {
-      height: 40px;
+      height: 70px;
     }
 
     /* Header Section */
     .header {
-      background: linear-gradient(to right, #00498F, #FF6D1A);
-      padding: 60px 20px;
+      background: linear-gradient(to left, #00498F, #FF6D1A);
+      padding: 80px 20px;
       color: white;
       text-align: center;
     }
@@ -209,8 +209,8 @@
     /* Hamburger Menu */
     .nav-menu {
             position: fixed;
-            top: 6px;
-            right: 6px;
+            top: 15px;
+            right: 15px;
             height: 50px;
             width: 50px;
             border-radius: 10px;
@@ -225,16 +225,16 @@
         }
 
         .nav-menu div {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             margin: 2px;
             position: fixed;
             z-index: 900;
         }
         .nav-menu span {
-            background-image: linear-gradient(rgb(10, 136, 255), rgb(124, 183, 255));
-            width: 80%;
-            height: 4px;
+            background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
+            width: 100%;
+            height: 6px;
             border-radius: 5px;
             display: block;
             position: absolute;
@@ -248,11 +248,11 @@
           z-index: 900;
         }
         .nav-menu .line1 {
-            transform: translate(-50%, -12px);
+            transform: translate(-50%, -16px);
             z-index: 900;
         }
         .nav-menu .line3 {
-            transform: translate(-50%, 8px);
+            transform: translate(-50%, 10px);
             z-index: 900;
         }
         .openmenu .line1 {
