--- a/projects.html
+++ b/projects.html
@@ -246,6 +246,21 @@
       .projects {
         font-size: 2rem;
       }
+          .nav-menu .line1 {
+            transform: translate(-50%, -18px);
+          }
+          .nav-menu .line3 {
+            transform: translate(-50%, 12px);
+          }
+          .openmenu .line1 {
+            transform: translate(-50%, -50%) rotate(-45deg);
+            z-index: 900;
+          }
+          .openmenu .line3 {
+              transform: translate(-50%, -50%) rotate(45deg);
+              z-index: 900;
+          }
+      
     }
     /* Responsive Design */
     @media (max-width: 768px) {
