--- a/partners.html
+++ b/partners.html
@@ -264,6 +264,20 @@
           .skip {
             bottom: 100px;
           }
+          .nav-menu .line1 {
+            transform: translate(-50%, -18px);
+          }
+          .nav-menu .line3 {
+            transform: translate(-50%, 12px);
+          }
+          .openmenu .line1 {
+            transform: translate(-50%, -50%) rotate(-45deg);
+            z-index: 900;
+          }
+          .openmenu .line3 {
+              transform: translate(-50%, -50%) rotate(45deg);
+              z-index: 900;
+          }
       }
 
   </style>
