--- a/hiring.html
+++ b/hiring.html
@@ -206,6 +206,20 @@
       .trans-nav-btn-menu {
         left: 50%;
       }
+          .nav-menu .line1 {
+            transform: translate(-50%, -18px);
+          }
+          .nav-menu .line3 {
+            transform: translate(-50%, 12px);
+          }
+          .openmenu .line1 {
+            transform: translate(-50%, -50%) rotate(-45deg);
+            z-index: 900;
+          }
+          .openmenu .line3 {
+              transform: translate(-50%, -50%) rotate(45deg);
+              z-index: 900;
+          }
     }
 
     .hero-section {
