--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       </section>
     </div>
     
-    <div class="logos"><img class="logo" src="assets/images/logoname.png"></div>
+    <a href="/" class="logos"><img class="logo" src="assets/images/logoname.png"></a>
 
     <i class="fas fa-chevron-left arrow left-arrow"></i>
     <i class="fas fa-chevron-right arrow right-arrow"></i>
@@ -492,8 +492,8 @@
         document.getElementById("buttoniii").addEventListener("click", () => window.location.href = "pages/partners.html");
         document.getElementById("buttonthree").addEventListener("click", () => window.location.href = "pages/projects.html");
         document.getElementById("buttoniiii").addEventListener("click", () => window.location.href = "pages/projects.html");
-        document.getElementById("buttonzero").addEventListener("click", () => window.location.href = "index.html");
-        document.getElementById("buttoni").addEventListener("click", () => window.location.href = "index.html");
+        document.getElementById("buttonzero").addEventListener("click", () => window.location.href = "/");
+        document.getElementById("buttoni").addEventListener("click", () => window.location.href = "/");
         document.getElementById("buttoniiiii").addEventListener("click", () => window.location.href = "pages/servises.html");
         document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "pages/hiring.html");
         document.getElementById("buttonthreedotfive").addEventListener("click", () => window.location.href = "pages/servises.html");
