--- a/pages/partners.html
+++ b/pages/partners.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #7e7e7e, #dedede);
+      background: linear-gradient(to left, #00498F, #FF6D1A);
       color: #fff;
     }
 
@@ -293,7 +293,7 @@
     </div>
 </div>
 <header>
-  <img src="../assets/images/logoname.png" alt="Logo">
+  <a href="/"><img src="../assets/images/logoname.png" alt="Logo"></a>
 </header>
 
 <!-- Navigation Menu -->
@@ -463,17 +463,17 @@
         window.location.href = "projects.html";
     });
     document.getElementById("buttoni").addEventListener("click", function () {
-        window.location.href = "../index.html";
+        window.location.href = "../";
     });
     document.getElementById("buttoniiiii").addEventListener("click", function () {
         window.location.href = "servises.html";
     });
     document.getElementById("buttonii").addEventListener("click", function () {
-        window.location.href = "../index.html#content";
+        window.location.href = "../#content";
     });
 
     document.getElementById("buttoniiiiii").addEventListener("click", function () {
-        window.location.href = "../index.html#final";
+        window.location.href = "../#final";
     });
     document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
 
