--- a/pages/pro4.html
+++ b/pages/pro4.html
@@ -322,7 +322,7 @@
 </div>
 
   <header>
-    <img src="../assets/images/logoname.png" alt="Logo">
+    <a href="/"><img src="../assets/images/logoname.png" alt="Logo"></a>
   </header>
   <div class="content">
     <video src="../assets/videos/residentialvid1.mp4" loop autoplay muted></video>
@@ -566,7 +566,7 @@
             window.location.href = "partners.html";
         });
         document.getElementById("buttoni").addEventListener("click", function () {
-            window.location.href = "../index.html";
+            window.location.href = "../";
         });
         document.getElementById("buttoniiiii").addEventListener("click", function () {
             window.location.href = "servises.html";
@@ -575,11 +575,11 @@
             window.location.href = "projects.html";
         });
         document.getElementById("buttonii").addEventListener("click", function () {
-            window.location.href = "../index.html#content";
+            window.location.href = "../#content";
         });
 
         document.getElementById("buttoniiiiii").addEventListener("click", function () {
-            window.location.href = "../index.html#final";
+            window.location.href = "../#final";
         });
         document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
   </script>
