--- a/pages/pro5.html
+++ b/pages/pro5.html
@@ -312,7 +312,7 @@
 </div>
 
   <header>
-    <img src="../assets/images/logoname.png" alt="Logo">
+    <a href="/"><img src="../assets/images/logoname.png" alt="Logo"></a>
   </header>
   <div class="content">
       <div class="projects">
@@ -451,7 +451,7 @@
             window.location.href = "partners.html";
         });
         document.getElementById("buttoni").addEventListener("click", function () {
-            window.location.href = "../index.html";
+            window.location.href = "../";
         });
         document.getElementById("buttoniiiii").addEventListener("click", function () {
             window.location.href = "servises.html";
@@ -460,11 +460,11 @@
             window.location.href = "projects.html";
         });
         document.getElementById("buttonii").addEventListener("click", function () {
-            window.location.href = "../index.html#content";
+            window.location.href = "../#content";
         });
 
         document.getElementById("buttoniiiiii").addEventListener("click", function () {
-            window.location.href = "../index.html#final";
+            window.location.href = "../#final";
         });
         document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
   </script>
