--- a/pages/pro6.html
+++ b/pages/pro6.html
@@ -305,7 +305,7 @@
 </div>
 
   <header>
-    <img src="../assets/images/logoname.png" alt="Logo">
+    <a href="/"><img src="../assets/images/logoname.png" alt="Logo"></a>
   </header>
 
   <div class="content">
