--- a/pages/hiring.html
+++ b/pages/hiring.html
@@ -331,7 +331,7 @@
 </div>
 
   <header>
-    <img src="../assets/images/logoname.png" alt="Logo">
+    <a href="/"><img src="../assets/images/logoname.png" alt="Logo"></a>
   </header>
 
   <div class="content">
@@ -410,7 +410,7 @@
             window.location.href = "partners.html";
         });
         document.getElementById("buttoni").addEventListener("click", function () {
-            window.location.href = "../index.html";
+            window.location.href = "../";
         });
         document.getElementById("buttoniiiii").addEventListener("click", function () {
             window.location.href = "servises.html";
@@ -419,11 +419,11 @@
             window.location.href = "projects.html";
         });
         document.getElementById("buttonii").addEventListener("click", function () {
-            window.location.href = "../index.html#content";
+            window.location.href = "../#content";
         });
 
         document.getElementById("buttoniiiiii").addEventListener("click", function () {
-            window.location.href = "../index.html#final";
+            window.location.href = "../#final";
         });
   </script>
 </body>
