--- a/pages/servises.html
+++ b/pages/servises.html
@@ -374,7 +374,7 @@
     <button id="buttoniiiiiii">Careers</button>
   </div>
   <header>
-    <img src="../assets/images/logoname.png" alt="Logo">
+    <a href="/"><img src="../assets/images/logoname.png" alt="Logo"></a>
   </header>
   <!-- Header Section -->
   <div class="header">
@@ -549,17 +549,17 @@
             window.location.href = "projects.html";
         });
         document.getElementById("buttoni").addEventListener("click", function () {
-            window.location.href = "../index.html";
+            window.location.href = "../";
         });
         document.getElementById("buttoniiiii").addEventListener("click", function () {
             window.location.href = "partners.html";
         });
         document.getElementById("buttonii").addEventListener("click", function () {
-            window.location.href = "../index.html#content";
+            window.location.href = "../#content";
         });
 
         document.getElementById("buttoniiiiii").addEventListener("click", function () {
-            window.location.href = "../index.html#final";
+            window.location.href = "../#final";
         });
         document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
   </script>
