--- a/pages/job2.html
+++ b/pages/job2.html
@@ -478,7 +478,7 @@
         <div class="detail">
             <img src="https://img.icons8.com/ios/50/000000/worldwide-location.webp" alt="Location Icon" class="icon">
             <h3>Job Location</h3>
-            <p class="light">cairo</p>
+            <p class="light">Cairo</p>
         </div>
         <div class="detail">
             <img src="https://img.icons8.com/ios/50/000000/briefcase.webp" alt="Position Icon" class="icon">
