--- a/pages/servises.html
+++ b/pages/servises.html
@@ -395,9 +395,9 @@
           <img src="../assets/images/service1.jpg" alt="Air Conditioning">
         </div>
         <div class="content">
-          <p class="description">we specialize in providing high-quality air-conditioning solutions for residential, commercial, and industrial spaces. With a strong commitment to comfort, energy efficiency, and reliability, we are dedicated to delivering the best cooling systems tailored to meet the unique needs of every client.
+          <p class="description">We specialize in providing high-quality air-conditioning solutions for residential, commercial, and industrial spaces. With a strong commitment to comfort, energy efficiency, and reliability, we are dedicated to delivering the best cooling systems tailored to meet the unique needs of every client.
             <br>
-            <strong class="special">Our Services covers the following</strong>
+            <strong class="special">Our Services cover the following</strong>
             <br>
             • Air Conditioning Systems: Installation and maintenance of central air conditioning systems "chilled water", split units, VRF systems, and more.
             <br>
@@ -416,7 +416,7 @@
           <img src="../assets/images/service2.jpg" alt="Plumbing">
         </div>
         <div class="content">
-          <p class="description">We are specialised in providing professional solutions for water and drainage systems in residential, commercial, and industrial applications. These services ensure the efficient and safe management of water supply and waste dispos.</p>
+          <p class="description">We are specialized in providing professional solutions for water and drainage systems in residential, commercial, and industrial applications. These services ensure the efficient and safe management of water supply and waste dispos.</p>
         </div>
       </div>
       <div class="service-item">
@@ -437,7 +437,7 @@
         </div>
         <div class="content">
           <span style="font-size: 20px;">(Power, Lighting, and Low Current)</span>
-          <p class="description">we provide comprehensive electrical solutions tailored to a wide range of needs. Our services are designed to ensure safety, efficiency, and reliability.
+          <p class="description">We provide comprehensive electrical solutions tailored to a wide range of needs. Our services are designed to ensure safety, efficiency, and reliability.
             <br>
             <strong class="special">We cover the following areas</strong>
             <br>
@@ -456,7 +456,7 @@
           <img src="../assets/images/service5.jpg" alt="Smart Home">
         </div>
         <div class="content">
-          <p class="description">we specialize in transforming living spaces into intelligent, connected environments with cutting-edge smart home solutions. Our mission is to enhance comfort, convenience, and security by integrating advanced technology into homes, tailored to meet the unique needs of every client.</p>
+          <p class="description">We specialize in transforming living spaces into intelligent, connected environments with cutting-edge smart home solutions. Our mission is to enhance comfort, convenience, and security by integrating advanced technology into homes, tailored to meet the unique needs of every client.</p>
         </div>
       </div>
       <div class="service-item">
@@ -465,7 +465,7 @@
           <img src="../assets/images/service6.jpg" alt="Steam Systems">
         </div>
         <div class="content">
-          <p class="description">With extensive experience in steam generation, distribution, and management, we are dedicated to deliver efficient, reliable, and safe steam systems that are tailored to meet the specific needs of each client. Our goal is to ensure that every system we design, install, and maintain operates at peak performance, maximizing energy efficiency and safety while minimizing downtime and operational costs.</p>
+          <p class="description">With extensive experience in steam generation, distribution, and management, we are dedicated to delivering efficient, reliable, and safe steam systems that are tailored to meet the specific needs of each client. Our goal is to ensure that every system we design, install, and maintain operates at peak performance, maximizing energy efficiency and safety while minimizing downtime and operational costs.</p>
         </div>
       </div>
       <div class="service-item">
@@ -483,7 +483,7 @@
           <img src="../assets/images/service8.jpg" alt="Heating Systems">
         </div>
         <div class="content">
-          <p class="description">we customize heating solutions for homes, offices, and commercial facilities to ensure warmth, comfort, and energy efficiency, regardless of the season. With a commitment to excellence, we tailor each solution to meet the unique needs of every client, ensuring reliability, efficiency, and long-lasting performance. Our expert team is dedicated to delivering high-quality heating systems that provide consistent comfort while reducing energy costs and environmental impact.</p>
+          <p class="description">We customize heating solutions for homes, offices, and commercial facilities to ensure warmth, comfort, and energy efficiency, regardless of the season. With a commitment to excellence, we tailor each solution to meet the unique needs of every client, ensuring reliability, efficiency, and long-lasting performance. Our expert team is dedicated to delivering high-quality heating systems that provide consistent comfort while reducing energy costs and environmental impact.</p>
         </div>
       </div>
       <div class="service-item">
@@ -492,7 +492,7 @@
           <img src="../assets/images/service9.jpg" alt="Swimming Pools">
         </div>
         <div class="content">
-          <p class="description">our scope covers designing, constructing, and maintaining high-quality swimming pools for residential, commercial, and resort properties. Whether you're looking to create a luxurious backyard oasis or a functional pool for recreational or fitness purposes, we are committed to delivering custom solutions that meet your specific needs and exceed your expectations. From concept to completion, we ensure that each pool we build offers both style and durability.</p>
+          <p class="description">Our scope covers designing, constructing, and maintaining high-quality swimming pools for residential, commercial, and resort properties. Whether you're looking to create a luxurious backyard oasis or a functional pool for recreational or fitness purposes, we are committed to delivering custom solutions that meet your specific needs and exceed your expectations. From concept to completion, we ensure that each pool we build offers both style and durability.</p>
         </div>
       </div>
       <div class="service-item">
@@ -501,7 +501,7 @@
           <img src="../assets/images/service10.jpg" alt="Medical Gas Systems">
         </div>
         <div class="content">
-          <p class="description">we provide safe, reliable, and high-quality medical gas solutions for healthcare facilities, including hospitals, clinics, and medical centers. We are dedicated to delivering essential gases that meet the stringent standards required for medical applications, ensuring patient safety and supporting healthcare providers in delivering the best possible care. Our focus is on providing systems that are not only efficient and reliable but also comply with the highest safety and regulatory standards to ensure optimal performance in critical medical environments.</p>
+          <p class="description">We provide safe, reliable, and high-quality medical gas solutions for healthcare facilities, including hospitals, clinics, and medical centers. We are dedicated to delivering essential gases that meet the stringent standards required for medical applications, ensuring patient safety and supporting healthcare providers in delivering the best possible care. Our focus is on providing systems that are not only efficient and reliable but also comply with the highest safety and regulatory standards to ensure optimal performance in critical medical environments.</p>
         </div>
       </div>
     </div>
