--- a/pages/pro6.html
+++ b/pages/pro6.html
@@ -436,7 +436,7 @@
             window.location.href = "partners.html";
         });
         document.getElementById("buttoni").addEventListener("click", function () {
-            window.location.href = "index.html";
+            window.location.href = "../";
         });
         document.getElementById("buttoniiiii").addEventListener("click", function () {
             window.location.href = "servises.html";
@@ -445,11 +445,11 @@
             window.location.href = "projects.html";
         });
         document.getElementById("buttonii").addEventListener("click", function () {
-            window.location.href = "index.html#content";
+            window.location.href = "../#content";
         });
 
         document.getElementById("buttoniiiiii").addEventListener("click", function () {
-            window.location.href = "index.html#final";
+            window.location.href = "../#final";
         });
         document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "hiring.html");
   </script>
