--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Summit TECS</title>
+    <title>Summit TECS - Engineering & Construction Solutions</title>
     <meta property="og:title" content="Summit" />
     <meta property="og:description" content="At Summit We make anything happens." />
     <meta property="og:url" content="https://www.summittecs.com" />
