--- a/pages/hiring.html
+++ b/pages/hiring.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Careers</title>
+  <title>Careers at Summit TECS - Join Our Team</title>
   <link rel="icon" href="../assets/images/logo.webp" type="image/x-icon">
   <style>
     body {
