--- a/pages/job2.html
+++ b/pages/job2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Careers</title>
+  <title>Electrical Site Engineer - Summit TECS Careers</title>
   <link rel="icon" href="../logo.webp" type="image/x-icon">
   <style>
     body {
