--- a/pages/partners.html
+++ b/pages/partners.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Partners</title>
+  <title>Our Clients - Summit TECS Key Partners</title>
   <link rel="icon" href="../logo.webp" type="image/x-icon">
   <style>
     /* Reset and Base Styling */
