--- a/pages/pro5.html
+++ b/pages/pro5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>health care Projects</title>
+  <title>Healthcare Projects - Summit TECS Portfolio</title>
   <link rel="icon" href="../assets/images/logo.webp" type="image/x-icon">
   <style>
     body {
