--- a/pages/servises.html
+++ b/pages/servises.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Our Services</title>
+  <title>Our Services - Summit TECS Electromechanical Solutions</title>
   <link rel="icon" href="../assets/images/logo.webp" type="image/x-icon">
   <style>
     /* General Reset */
