--- a/pages/pro4.html
+++ b/pages/pro4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Villas Projects</title>
+  <title>Residential Buildings - Summit TECS Projects</title>
   <link rel="icon" href="../assets/images/logo.webp" type="image/x-icon">
   <style>
     body {
