--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
   <body>
     <div class="loading-screen" id="loading-screen">
       <img src="assets/images/preloader.gif" alt="Loading..." />
-      <div class="skip">
-        <button onclick="const loadingScreen = document.getElementById('loading-screen');
-        loadingScreen.style.opacity = '0'; // Add fade-out effect
-        setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out">skip loading...</button>
-        <p>images may not appear properly</p>
-      </div>
     </div>
     <div class="nav-menu">
       <div>
@@ -364,6 +358,12 @@
     
     <a href="/" class="logos"><img class="logo" src="assets/images/logoname.webp"></a>
 
+    <!-- Skip to Main Content Button -->
+    <button id="skip-to-content" class="skip-to-content-btn">
+      Skip to Main Content
+      <i class="fas fa-chevron-down"></i>
+    </button>
+
     <i class="fas fa-chevron-left arrow left-arrow"></i>
     <i class="fas fa-chevron-right arrow right-arrow"></i>
     <script>
@@ -497,6 +497,30 @@
         document.getElementById("buttoniiiii").addEventListener("click", () => window.location.href = "pages/servises.html");
         document.getElementById("buttoniiiiiii").addEventListener("click", () => window.location.href = "pages/hiring.html");
         document.getElementById("buttonthreedotfive").addEventListener("click", () => window.location.href = "pages/servises.html");
+
+        // Skip to Main Content Button Functionality
+        const skipBtn = document.getElementById('skip-to-content');
+        
+        window.addEventListener('scroll', () => {
+            // Show button only when at the very top (within 100px)
+            if (window.scrollY < 100) {
+                skipBtn.classList.add('visible');
+            } else {
+                skipBtn.classList.remove('visible');
+            }
+        });
+
+        skipBtn.addEventListener('click', () => {
+            document.getElementById('content').scrollIntoView({ 
+                behavior: 'smooth', 
+                block: 'start' 
+            });
+        });
+
+        // Initial check on page load
+        if (window.scrollY < 100) {
+            skipBtn.classList.add('visible');
+        }
 
         // Value Slider Logic
         const containers = document.querySelectorAll(".value-container");
