--- a/pages/partners.html
+++ b/pages/partners.html
@@ -284,14 +284,8 @@
 </head>
 <body>
   <div class="loading-screen" id="loading-screen">
-    <img src="../preloader.gif" alt="Loading..." />
-    <div class="skip">
-      <button onclick="const loadingScreen = document.getElementById('loading-screen');
-      loadingScreen.style.opacity = '0'; // Add fade-out effect
-      setTimeout(() => loadingScreen.style.display = 'none', 500); // Hide after fade-out">skip loading...</button>
-      <p>images may not appear properly</p>
-    </div>
-</div>
+    <img src="../assets/images/preloader.gif" alt="Loading..." />
+  </div>
 <header>
   <a href="/"><img src="../assets/images/logoname.webp" alt="Logo"></a>
 </header>
